--- a/src/presentacion/RegistrarMovimiento.form
+++ b/src/presentacion/RegistrarMovimiento.form
@@ -104,7 +104,7 @@
                               <Component id="lblCodEmpleado" min="-2" max="-2" attributes="0"/>
                               <Component id="lblFechaMovi" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="46" max="32767" attributes="0"/>
+                          <EmptySpace pref="55" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -145,7 +145,7 @@
                       <Component id="txtcuenReferencia" alignment="0" max="32767" attributes="0"/>
                       <Component id="txtTipoMovimiento" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="50" max="32767" attributes="0"/>
+                  <EmptySpace pref="59" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="259" max="-2" attributes="0"/>
@@ -593,11 +593,16 @@
         <Component class="javax.swing.JComboBox" name="cbxDescripcion">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="9">
+                <StringItem index="0" value="Apertura de cuenta"/>
+                <StringItem index="1" value="Cancelacion Cuenta"/>
+                <StringItem index="2" value="Depositos"/>
+                <StringItem index="3" value="Retiros"/>
+                <StringItem index="4" value="Interes"/>
+                <StringItem index="5" value="Mantenimiento"/>
+                <StringItem index="6" value="Transferencias"/>
+                <StringItem index="7" value="Cargo por Mantenimiento "/>
+                <StringItem index="8" value="ITF"/>
               </StringArray>
             </Property>
           </Properties>
