--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -1056,7 +1056,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/InicioSesion.gif"/>
+                          <Image iconType="3" name="/img/recargaarSimbo (1).png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Recargar Saldo"/>
                       </Properties>
