--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -701,7 +701,7 @@
                           <Component id="secondPanelTab7" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="secondPanelTab8" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="18" max="32767" attributes="0"/>
+                          <EmptySpace pref="20" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1056,7 +1056,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/recargaarSimbo (1).png"/>
+                          <Image iconType="3" name="/img/InicioSesion.gif"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Recargar Saldo"/>
                       </Properties>
@@ -1144,7 +1144,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel15" alignment="0" pref="52" max="32767" attributes="0"/>
+                          <Component id="jLabel15" alignment="0" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
@@ -1161,7 +1161,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/InicioSesion.gif"/>
+                          <Image iconType="3" name="/img/retirarSaldo.png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Retirar Saldo"/>
                       </Properties>
